# PicoPOST

./: .gitignore  .gitmodules  LICENSE.md  README.md
.github/workflows/: main.yml
firmware/: .gitignore  CMakeLists.txt
firmware/cfg/: calib.h.in  picopost-rp2040.h  pins.h.in  proj.h.in
firmware/lib/bus/: CMakeLists.txt  bus.c  bus.h
firmware/lib/gpioexp/: CMakeLists.txt  gpioexp.cpp  gpioexp.hpp
firmware/lib/oled/: CMakeLists.txt  common.h  fonts.h  oled.h  ssd1306.c  ssd1306.h
firmware/lib/voltmon/: CMakeLists.txt  voltmon.c  voltmon.cpp  voltmon.h  voltmon.hpp
firmware/src/: app.cpp  app.hpp  bitmaps.hpp  common.hpp  fastread.pio  logic.cpp  logic.hpp  main.c  main.cpp  main.h  main.hpp  ui.cpp  ui.hpp
pcb/ISA rev1/: ISA card rev1.kicad_pcb  ISA card rev1.kicad_pro  ISA card rev1.kicad_sch  fp-lib-table
pcb/ISA rev2 with remote/: #auto_saved_files#  ISA card rev2-B_Cu.gbr  ISA card rev2-B_Mask.gbr  ISA card rev2-B_Paste.gbr  ISA card rev2-B_Silkscreen.gbr  ISA card rev2-Edge_Cuts.gbr  ISA card rev2-F_Cu.gbr  ISA card rev2-F_Mask.gbr  ISA card rev2-F_Paste.gbr  ISA card rev2-F_Silkscreen.gbr  ISA card rev2-NPTH.drl  ISA card rev2-PTH.drl  ISA card rev2-job.gbrjob  ISA card rev2.kicad_pcb  ISA card rev2.kicad_pro  ISA card rev2.kicad_sch  fp-lib-table
pcb/ISA rev4/: #auto_saved_files#  ISA rev4.kicad_pcb  ISA rev4.kicad_pro  ISA rev4.kicad_sch  fp-lib-table
pcb/ISA rev4/gbr/: ISA rev4-B_Cu.gbr  ISA rev4-B_Mask.gbr  ISA rev4-B_Paste.gbr  ISA rev4-B_Silkscreen.gbr  ISA rev4-Edge_Cuts.gbr  ISA rev4-F_Cu.gbr  ISA rev4-F_Mask.gbr  ISA rev4-F_Paste.gbr  ISA rev4-F_Silkscreen.gbr  ISA rev4-NPTH.drl  ISA rev4-PTH.drl  ISA rev4-User_1.gbr  ISA rev4-job.gbrjob
pcb/ISA rev5/: ISA rev5.kicad_pcb  ISA rev5.kicad_pro  ISA rev5.kicad_sch  remote.kicad_pcb
pcb/ISA rev5/gbr/: ISA rev5-B_Cu.gbr  ISA rev5-B_Mask.gbr  ISA rev5-B_Paste.gbr  ISA rev5-B_Silkscreen.gbr  ISA rev5-Edge_Cuts.gbr  ISA rev5-F_Cu.gbr  ISA rev5-F_Mask.gbr  ISA rev5-F_Paste.gbr  ISA rev5-F_Silkscreen.gbr  ISA rev5-NPTH.drl  ISA rev5-PTH.drl  ISA rev5-User_1.gbr  ISA rev5-job.gbrjob  remote-B_Mask.gbr  remote-B_Paste.gbr  remote-Edge_Cuts.gbr  remote-F_Mask.gbr  remote-F_Paste.gbr  remote-F_Silkscreen.gbr  remote-NPTH.drl  remote-PTH.drl  remote-User_1.gbr  remote-job.gbrjob
pcb/ISA rev6/: ISA rev6.kicad_pcb  ISA rev6.kicad_pro  remote.kicad_pcb  remote.kicad_sch
pcb/ISA rev6/gbr/: ISA rev6-B_Cu.gbr  ISA rev6-F_Mask.gbr  ISA rev6-F_Silkscreen.gbr  ISA rev6-PTH.drl  ISA rev6-User_1.gbr  ISA rev6-job.gbrjob  remote-B_Cu.gbr  remote-B_Mask.gbr  remote-B_Silkscreen.gbr  remote-F_Cu.gbr  remote-F_Mask.gbr  remote-F_Paste.gbr  remote-F_Silkscreen.gbr  remote-User_1.gbr  remote-job.gbrjob
pcb/ISA rev7/: ISA rev7.kicad_pcb  ISA rev7.kicad_pro  ISA rev7.kicad_sch  remote.kicad_pcb  remote.kicad_pro  remote.kicad_sch  ~ISA rev7.kicad_sch.lck
pcb/ISA rev7/gbr/: ISA rev7-B_Cu.gbr  ISA rev7-B_Mask.gbr  ISA rev7-B_Paste.gbr  ISA rev7-B_Silkscreen.gbr  ISA rev7-Edge_Cuts.gbr  ISA rev7-F_Cu.gbr  ISA rev7-F_Mask.gbr  ISA rev7-F_Paste.gbr  ISA rev7-F_Silkscreen.gbr  ISA rev7-NPTH.drl  ISA rev7-User_1.gbr  ISA rev7-job.gbrjob  remote-B_Cu.gbr  remote-B_Mask.gbr  remote-B_Paste.gbr  remote-B_Silkscreen.gbr  remote-Edge_Cuts.gbr  remote-F_Cu.gbr  remote-F_Mask.gbr  remote-F_Paste.gbr  remote-F_Silkscreen.gbr  remote-NPTH.drl  remote-PTH.drl  remote-User_1.gbr  remote-job.gbrjob
pcb/ISA rev8/: ISA rev8.kicad_pcb  ISA rev8.kicad_pro  ISA rev8.kicad_sch  fp-lib-table  remote.kicad_pcb  remote.kicad_pro  remote.kicad_sch
pcb/ISA rev8/bom/: ibom.html
pcb/ISA rev8/gbr/: ISA rev8-B_Cu.gbr  ISA rev8-B_Mask.gbr  ISA rev8-B_Paste.gbr  ISA rev8-B_Silkscreen.gbr  ISA rev8-Edge_Cuts.gbr  ISA rev8-F_Cu.gbr  ISA rev8-F_Mask.gbr  ISA rev8-F_Paste.gbr  ISA rev8-F_Silkscreen.gbr  ISA rev8-NPTH.drl  ISA rev8-PTH.drl  ISA rev8-User_1.gbr  ISA rev8-job.gbrjob  remote-B_Cu.gbr  remote-B_Mask.gbr  remote-B_Paste.gbr  remote-B_Silkscreen.gbr  remote-Edge_Cuts.gbr  remote-F_Cu.gbr  remote-F_Mask.gbr  remote-F_Paste.gbr  remote-F_Silkscreen.gbr  remote-NPTH.drl  remote-PTH.drl  remote-User_1.gbr  remote-job.gbrjob
pcb/ISA rev8/remote_bom/: ibom.html
pcb/Pro rev1/: #auto_saved_files#  Pro rev1.kicad_dru  Pro rev1.kicad_pcb  Pro rev1.kicad_pro  Pro rev1.kicad_sch  fp-lib-table  pro-isa.kicad_sch  pro-pwr-syslgc.kicad_sch  pro-rp2040.kicad_sch  pro-rp2350.kicad_sch  sym-lib-table
pcb/Pro rev1/jlcpcb/: project.db
pcb/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
pcb/RP-Pico Libraries/modified ICs.pretty/: 2x03 solder jumper.kicad_mod  6mm single side button.kicad_mod  7.6mm side mount buzzer.kicad_mod  SC-59_diode_Handsoldering.kicad_mod  TO-236AB_diode.kicad_mod  TRW_logo.kicad_mod  picopost_logo.kicad_mod
pcb/project libraries/: 1040310811.stp  ISAfinger.kicad_sym  MCP23009-E_SO.kicad_sym  RJ45_Hanrun_HR911105A.wrl  SW_SPST_TS-1088-xR020.kicad_mod  TRW_logo.kicad_mod  eec.dcm  eec.lib  picopost_logo.kicad_mod  postcard_stamp.kicad_mod
pcb/project libraries/IDEcardedge.pretty/: BUS_IDE8.kicad_mod
pcb/project libraries/MCP23009/: SOIC127P1030X265-18N.kicad_mod
pcb/project libraries/RP2350_KiCad-main/: README.md  RP2350A-QFN60.step  RP2350A-QFN60.wrl  RP2350A_QFN-60_EP_7.75x7.75_Pitch0.4mm.kicad_mod  RP2350B-QFN80.step  RP2350B-QFN80.wrl  RP2350B_QFN-80_EP_10.573x10.573_Pitch0.4mm.kicad_mod  rp2350a-qfn60.kicad_sym  rp2350b-qfn80.kicad_sym
pcb/project libraries/eec.models/: 470804001.stp  Molex_-_47080-4001.step
pcb/project libraries/eec.pretty/: Molex-47080-4001-0-0-0.kicad_mod
